[chromium] check that we're not running multiple modal dialogs at the same time https://bugs.webkit.org/show_bug.cgi?id=78486

Reviewed by Kent Tamura.

* DumpRenderTree/chromium/TestShell.cpp:
(TestShell::TestShell):
* DumpRenderTree/chromium/TestShell.h:
(TestShell::setIsDisplayingModalDialog):
(TestShell::isDisplayingModalDialog):
(TestShell):
* DumpRenderTree/chromium/WebViewHost.cpp:
(WebViewHost::runModal):


Canonical link: https://commits.webkit.org/95551@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107704 268f45cc-cd09-0410-ab3c-d52691b4dbfc